--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ header {
 }
 
 .nav-menu .menu .option h2 {
-    font-size: 2.0rem;
+    font-size: 1.5rem;
     color: white;
 
 }
@@ -236,7 +236,7 @@ header {
     width: 100%;
     height: 20%;
     border-radius: 1.8rem;
-    margin: 20% 0 0 0;
+    margin: 0 0 0 0;
 }
 
 .nav-menu .menu .promododia h2 {
