--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -187,6 +187,40 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
 }
 
+/* Keyframes para efeito de zoom (aumenta e volta ao original) */
+@keyframes zoomEffect {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+/* Estilo Comum para os botões de nav paginas */
+.btn-nav {
+        background-color: #302f2f; /* Cor principal */
+        border: 1px solid #6d6d6d;
+        display: inline-block; /* Para que ele aceite padding/margin */
+        padding: 10px 20px;
+        margin-right: 15px;
+        border-radius: 5px; /* Cantos arredondados */
+        text-decoration: white; /* Remove o sublinhado */
+        color: white; /* Cor do texto */
+        font-weight: bold;
+        text-align: center;
+        transition: background-color 0.3s ease, transform 0.2s ease; /* Transição suave para hover */
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
+}
+
+/* Aplicar animação ao passar o mouse */
+.btn-nav:hover {
+        animation: zoomEffect 0.6s ease;
+}
+
 /* Estilo Específico para o CSV (Verde/Sucesso) */
 .export-button.csv {
     background-color: #28a745; /* Verde */
