--- a/css/style.css
+++ b/css/style.css
@@ -756,6 +756,22 @@ footer::before {
     text-decoration: underline;
 }
 
+.voltar {
+    background-color: #cc1111; /* Cinza */
+    border: 1px solid #6d6d6d;
+    display: inline-block; /* Para que ele aceite padding/margin */
+    padding: 10px 20px;
+    margin-right: 15px;
+    border-radius: 5px; /* Cantos arredondados */
+    text-decoration: none; /* Remove o sublinhado */
+    color: white; /* Cor do texto */
+    font-weight: bold;
+    text-align: center;
+    transition: background-color 0.3s ease; /* Transição suave para hover */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    cursor: pointer;
+}
+
 /* @media (max-width: 700px) {
     .footer-content {
         flex-direction: column;
