--- a/css/cardapio.css
+++ b/css/cardapio.css
@@ -33,6 +33,7 @@
 
 /* CARDÁPIO */
 .cardapio-section {
+    min-height: 25vh;
     max-width: 1200px;
     margin: 0 auto 48px auto;
     padding: 0 24px;
