--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -15,6 +15,14 @@ body {
 .dashboard-header img {
     height: 32px;
 }
+.dashboard-header .login {
+    color: #fff;
+    font-size: 1rem;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: .7vw;
+}
 .dashboard-title {
     color: #fff;
     font-size: 2.2rem;
