--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ header {
     background: #ff5a36;
     color: #fff;
     border-radius: 50%;
-    padding: .2vh .32vw;
+        padding: 1px 7px 1px 7px;
     font-size: .75rem;
 }
 
@@ -398,6 +398,7 @@ header {
     font-size: 1.2rem;
     font-weight: 700;
     margin: 1.5vh 0 .5vh .5vw;
+    color: black;
 }
 
 .sabor-card p {
